@@ -3,6 +3,7 @@ shady-KISS-skin History
 
 2016-05-20:
 - Adjustments for timerstates in timermenus and displaychannel
+- Removed setup for epg2vdr-skdPatch
 
 2016-05-11:
 - Reimplemented 'isRecording' and added 'current- and nextrecording' in displaychannel
